# alpha

./: .gitignore  .pre-commit-config.yaml  MYPY_GUIDE.md  Makefile  README.md  RUFF_GUIDE.md  SHORT_TERM_IMPROVEMENTS.md  _analysis.json  check_results.py  dataset_profiles.yaml  expression_policies.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  settings.yaml  test_config_validation.py  test_integration_validation.py  test_output.jsonl  test_output_results.jsonl  worldquant_brain_dataset_submit.py
blacklists/: README.md  template_blacklist.json
blacklists/fundamental6/: blacklist.json
blacklists/model16/: blacklist.json
blacklists/model51/: blacklist.json
blacklists/option8/: blacklist.json
config/: api.yaml  constants_defaults.yaml  dataset_profiles.yaml  expression_policies.yaml  quality_feedback.yaml  runtime.yaml  settings.yaml  simulation.yaml  templates.yaml
data/: template_blacklist.json  template_blacklist_fundamental6.json  template_blacklist_model51.json  template_blacklist_option.json  template_blacklist_pv1.json  worldquant_template_library.json  worldquant_template_library_fundamental6.json
data/blacklists/fundamental6/: blacklist.json
data/blacklists/model51/: blacklist.json
data/templates/base/: README.md  library.json
data/templates/fundamental6/: README.md  library.json
data/templates/model16/: README.md  legacy.json  library.json
data/templates/model51/: README.md  focused_fields.txt  focused_templates.txt  library.json  local_refine_industry_decay_triplet_round9.json
docs/: 01_beginner_guide.md  02_optimization_guide.md  02_research_and_data_guide.md  03_optimization_and_submission.md  03_repo_practice_guide.md  03_research_and_data_guide.md  04_platform_reference.md  04_platform_terms_and_states.md  README.md  pv1_optimization_strategy.md  worldquant_brain_knowledge.md
scripts/: check_results.py  clean_model51.py  monitor_fundamental6.ps1  run_fundamental6_cashflow_core_verify.sh  run_mypy.py  run_pv1_optimization.py  run_ruff.py  show_results.py
src/alpha/: __init__.py  __main__.py  _facade.py  bootstrap.py  bootstrap_cleanup.py  bootstrap_fields.py  bootstrap_state.py  config.py  config_models.py  config_yaml.py  error_handling.py  exceptions.py  finalize.py  loop_future_support.py  loop_persistence.py  loop_support.py  main.py  performance_monitor.py  run_loop.py  run_loop_feedback.py  run_loop_paths.py  run_loop_resume.py  run_loop_rounds.py  run_loop_state.py
src/alpha/analysis/: __init__.py  analysis_sync.py  failed_checks.py  feedback.py  feedback_filters.py  feedback_history.py  feedback_stats.py  field_stats.py  report_builder.py  result_identity.py  results_loader.py  stats.py  template_execution_policy.py  template_registry.py  template_registry_budget.py  template_registry_rules.py  template_registry_sidecars.py  template_registry_store.py  template_stats.py
src/alpha/api/: __init__.py  alphas.py  api_types.py  client.py  fields.py  http_backend.py  payloads.py  retry.py  session.py  simulations.py  timing.py
src/alpha/app/: __init__.py  bootstrap.py  bootstrap_cleanup.py  bootstrap_fields.py  bootstrap_resource_loading.py  bootstrap_state.py  bootstrap_steps.py  bootstrap_types.py  finalize.py  loop_future_support.py  loop_persistence.py  run_loop.py  run_loop_feedback.py  run_loop_paths.py  run_loop_resume.py  run_loop_rounds.py  run_loop_state.py
src/alpha/cli/: __init__.py  arg_resolution.py  constants.py  filters.py  parser.py  parser_schema.py  parser_sections.py  path_resolution.py  run_config.py
src/alpha/config/: __init__.py  _constants_api.py  _constants_core.py  _constants_paths.py  _constants_strings.py  _constants_templates.py  _constants_thresholds.py  constants.py  defaults.py  getters.py  models.py  policy.py  policy_coercers.py  policy_overrides.py  profiles.py  runtime_values.py  schema.py  types.py  unified_manager.py  yaml.py  yaml_sources.py  yaml_validator.py
src/alpha/core/: __init__.py  checkpoint.py  execution_filters.py  executor.py  result_processing.py  scheduler.py  scheduler_completion.py  simulation.py  simulation_parsing.py  simulation_precheck.py  simulation_results.py  simulation_stages.py  template_filters.py  template_planning.py  template_queue.py
src/alpha/di/: __init__.py  container.py
src/alpha/generators/: __init__.py  expression_builder.py  expressions.py  field_transforms.py  fields.py  fingerprint.py  matrix_templates.py  partner_fields.py  payload.py  ratio_templates.py  settings.py  template_candidates.py  template_classification.py  template_metadata.py  template_priority.py  template_refine.py  template_variations.py  templates.py  variants.py
src/alpha/health/: __init__.py  checks.py
src/alpha/io/: __init__.py  analysis_sync.py  common.py  credentials.py  credentials_crypto.py  output.py  output_paths.py  results_store.py
src/alpha/models/: __init__.py  _facade.py  base.py  domain.py  domain_conversion.py  domain_parsers.py  domain_serializers.py  domain_types.py  io_types.py  result_predicates.py  runtime.py  runtime_config.py  runtime_options.py  runtime_protocols.py  (+1 more)
templates/fundamental6/: README.md  library.json
templates/model16/: README.md
templates/model51/: README.md  focused_fields.txt  library.json
templates/option8/: README.md  library.json
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_config_manager.py  test_core_integration.py  test_end_to_end.py  test_error_performance_integration.py  test_midterm_features.py
tests/unit/: __init__.py  test_api_client.py  test_bootstrap.py  test_checkpoint.py  test_cli_parser.py  test_config.py  test_credentials.py  test_exceptions.py  test_expressions.py  test_feedback_family.py  test_feedback_stats.py  test_field_transforms.py  test_finalize.py  test_main_clean.py  test_main_field_selection.py  test_models.py  test_output.py  test_run_loop_resume.py  test_scheduler.py  test_simulation.py  test_template_execution_policy.py  test_template_files.py  test_template_metadata.py  test_utils.py
tools/: directory_optimizer.py  optimize_data_directory.py
(+70 files in other folders)
