[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha"
version = "1.0.0"
description = "WorldQuant BRAIN Alpha 自动生成与提交工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alpha Generator Team"}
]
keywords = ["worldquant", "brain", "alpha", "quantitative", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "cryptography>=42.0.0",
    "coloredlogs>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.11.0",
    "mypy>=1.0",
]

[project.scripts]
alpha = "alpha.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/alpha"
Repository = "https://github.com/your-org/alpha"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"alpha" = "src/alpha"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/alpha"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "UP006",  # non-pep585-annotation (requires py3.9+)
    "UP045",  # non-pep604-annotation-optional (requires py3.10+)
    "RUF001", # ambiguous-unicode-character-string (Chinese comments are legitimate)
    "RUF002", # ambiguous-unicode-character-docstring (Chinese docstrings are legitimate)
    "RUF003", # ambiguous-unicode-character-comment (Chinese comments are legitimate)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["alpha"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/"]