[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha"
version = "1.0.0"
description = "WorldQuant BRAIN Alpha 自动生成与提交工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alpha Generator Team"}
]
keywords = ["worldquant", "brain", "alpha", "quantitative", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "cryptography>=42.0.0",
    "coloredlogs>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.11.0",
    "mypy>=1.0",
]

[project.scripts]
alpha = "alpha.__main__:main"
pv1-optimize = "alpha.__main__:run_pv1_optimization"

[project.urls]
Homepage = "https://github.com/yucongcong-dev/alpha"
Repository = "https://github.com/yucongcong-dev/alpha"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"alpha" = "src/alpha"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/alpha"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

# 排除目录
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "PERF",   # perflint
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "UP006",  # non-pep585-annotation (requires py3.9+)
    "UP045",  # non-pep604-annotation-optional (requires py3.10+)
    "RUF001", # ambiguous-unicode-character-string (Chinese comments are legitimate)
    "RUF002", # ambiguous-unicode-character-docstring (Chinese docstrings are legitimate)
    "RUF003", # ambiguous-unicode-character-comment (Chinese comments are legitimate)
    "SIM105", # use-contextlib-suppress (not always clearer)
    "PERF203", # try-except-in-loop (micro-optimization)
]
fixable = ["ALL"]
unfixable = [
    "F841",   # unused-variable (review manually)
    "F401",   # unused-import (review manually)
]

[tool.ruff.lint.isort]
known-first-party = ["alpha"]
force-single-line = false
force-sort-within-sections = true
case-sensitive = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_decorators = false
exclude = ["tests/"]

# 对核心模块启用更严格检查
[[tool.mypy.overrides]]
module = [
    "alpha.core.simulation",
    "alpha.core.scheduler",
    "alpha.generators.expressions",
    "alpha.models.base",
]
warn_return_any = true
check_untyped_defs = true